--- a/src/Components/RestaurantCard.css
+++ b/src/Components/RestaurantCard.css
@@ -1,4 +1,13 @@
 .custom-card-bg {
   background-color: #f4f3ee;
   border: 1px solid rgba(0, 0, 0, 0.075);
+  cursor: pointer;
+  transition: all ease-in-out 0.3s;
+}
+.custom-card-bg:hover {
+  scale: 1.02;
+  border: 1.5px solid #ccc5b9;
+}
+.custom-button-bg {
+  background-color: #403d39;
 }
